# productroadmap_sheet

./: .gitignore  alembic.ini  intake_sheets_test_config.json  main.py  optimization_center_sheet_config.json  product_ops_config.json  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: sync.yml
alembic/: env.py
app/: config.py  main.py
app/api/: deps.py  (+1 more)
docs/: FLOW3_IMPLEMENTATION.md  agent_as_pm.md  api_tests.md  cli_commands_cheatsheet.md  flow_1.md  flow_2.md  flow_3_productops.md  initiative_schema.md  intake_service.md  kpi_contributions_flow_analysis.md  mathmodel.md  naming_convention.md  projectscope.md  provenance_tokens.md  resilient_flexible_etl_enhancement.md  scoring.md  scoring_system_overview.md  sqlalchemy_pydantic_models.md  todo.md
scripts/: generate_codebase_registry.py  sync_constraints_from_sheet.py  sync_sheets_registry.py
test_scripts/: backlog_sync_cli.py  check_optimization_sheet_data.py  check_published_results.py  conftest.py  debug_candidates_read.py  debug_solver_directly.py  flow1_cli.py  flow1_etl_cli.py  flow2_scoring_activation_cli.py  flow2_scoring_cli.py  flow3_product_ops_cli.py  flow4_mathmodels_cli.py  init_db.py  q2_2026_simulation_populate.py  quick_test_intake.py  run_intake_sync_once.py  run_scoring_once.py  sync_scenarios.py  test_explain_selection_e2e.py  test_flow3_e2e.py  test_intake_archiving.py  test_intake_sheet_api.py  test_json_logging.py  test_kpi_contributions_sync.py  test_metrics_config_sync.py  test_multi_model_scoring_e2e.py  test_optimization_e2e.sh  test_sheets_service_account.py
(+193 files in other folders)
