[project]
name = "productroadmap-sheet-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.115.0",
    "google-api-python-client>=2.131.0",
    "google-auth>=2.0.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.2",
    "openai>=2.11.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-json-logger>=4.0.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.34.0",
]

[project.scripts]
flow1-sync = "flow1_cli:main"
